--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:demo": "npm run build:lib:prod && cross-env NODE_ENV=production ng build --configuration production --base-href=\"/ngx-charts/\"",
     "copy-files": "cp README.md dist/swimlane/ngx-charts/README.md && cp LICENSE dist/swimlane/ngx-charts/LICENSE",
     "ci": "run-s lint prettier:ci test:ci",
-    "test": "run-s lint prettier:ci test:unit",
+    "test": "run-p lint prettier:ci test:unit",
     "test:unit": "ng test @swimlane/ngx-charts --watch=false",
     "test:watch": "ng test @swimlane/ngx-charts",
     "test:ci": "ng test @swimlane/ngx-charts --watch=false --progress=false --browsers=ChromeHeadlessCI",
@@ -40,22 +40,22 @@
     "@angular/router": "~13.1.0",
     "@swimlane/ngx-ui": "^35.6.5",
     "codemirror": "^5.49.2",
-    "d3-array": "^2.9.1",
-    "d3-brush": "^2.1.0",
-    "d3-color": "^2.0.0",
-    "d3-ease": "^2.0.0",
-    "d3-format": "^2.0.0",
-    "d3-hierarchy": "^2.0.0",
-    "d3-interpolate": "^2.0.1",
-    "d3-scale": "^3.2.3",
-    "d3-selection": "^2.0.0",
-    "d3-shape": "^2.0.0",
-    "d3-time-format": "^3.0.0",
-    "d3-transition": "^2.0.0",
+    "d3-array": "^3.1.1",
+    "d3-brush": "^3.0.0",
+    "d3-color": "^3.0.1",
+    "d3-ease": "^3.0.1",
+    "d3-format": "^3.1.0",
+    "d3-hierarchy": "^3.1.1",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.1.0",
+    "d3-time-format": "^4.1.0",
+    "d3-transition": "^3.0.1",
     "emoji-flags": "^1.2.0",
     "moment-timezone": "^0.5.28",
     "ng-in-viewport": "^6.1.5",
-    "ngx-moment": "^5.0.0",
+    "ngx-moment": "^6.0.2",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^6.5.3 || ^7.4.0",
     "tslib": "^2.3.0",
@@ -64,35 +64,24 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.1",
     "@angular-devkit/build-ng-packagr": "~0.1002.0",
-    "@angular-eslint/builder": "13.1.0",
-    "@angular-eslint/eslint-plugin": "13.1.0",
-    "@angular-eslint/eslint-plugin-template": "13.1.0",
-    "@angular-eslint/schematics": "13.1.0",
-    "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "^13.1.1",
     "@angular/compiler-cli": "~13.1.0",
     "@angular/language-service": "~13.1.0",
-    "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
-    "@types/d3-array": "^2.12.1",
-    "@types/d3-ease": "^2.0.0",
-    "@types/d3-interpolate": "^2.0.0",
-    "@types/d3-scale": "^3.3.0",
-    "@types/d3-selection": "^2.0.0",
-    "@types/d3-shape": "^2.1.0",
-    "@types/d3-transition": "^2.0.0",
+    "@types/d3-array": "^3.0.2",
+    "@types/d3-ease": "^3.0.0",
+    "@types/d3-interpolate": "^3.0.1",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-selection": "^3.0.2",
+    "@types/d3-shape": "^3.0.2",
+    "@types/d3-transition": "^3.0.1",
     "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/json-schema": "^7.0.4",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.11.0",
-    "@typescript-eslint/parser": "5.11.0",
     "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-security": "^1.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
